# geosets-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: debug_unit_box.rs  plot_sets.rs  readme_example.rs  test_cdd.rs  test_general.rs
src/: geometric_operations.rs  lib.rs  linalg_utils.rs  qhull_wrapper.rs
src/cddlib_rs/: cdd_bindings.rs  cdd_wrapper.h  mod.rs
src/sets/: errors.rs  hpolytope.rs  interval.rs  mod.rs  operations.rs  polytope.rs  vpolytope.rs  zonotope.rs
tests/: cdd_tests.rs  common_tests copy.txt  common_tests.rs  common_tests_random.rs  hpolytope_tests.rs
