[package]
name = "geosets-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = "1.14.0"
itertools = "0.14.0"
ndarray = "0.16"
ndarray-linalg = { version = "0.17", features = ["openblas"] }
ndarray-rand = "0.15.0"
plotly = "0.13.5"
qhull = "0.4.0"
rstest = "0.26.1"
thiserror = "2.0.15"

[build-dependencies]
bindgen = "0.72.0"
